@@ -1,7 +1,8 @@
+<!--- Entrada de linea de albaran por codigo --->
 
-<%= inicio_formulario( { :controller => :albaran_lineas, :action => :asignar_linea, :update => params[:update] }, false ) %>
-  <div id="div_formulario_linea" class="formulario_izqda">
-    <%= texto "Codigo/ISBN", 'producto', 'codigo' %>
+<div id="div_formulario_codigo" class="formulario_izqda">
+  <%= inicio_formulario( { :controller => :albaran_lineas, :action => :asignar_linea, :update => params[:update] }, false ) %>
+    <%= texto "Código/ISBN", 'producto', 'codigo' %>
       <%= observe_field( "formulario_campo_producto_codigo", :frequency => 2, :update => "propiedades_producto", :with => :codigo, :url => {:controller => 'productos', :action => :producto_x_codigo, :template => 'listado_propiedades'}, :before => "Element.show('spinner')", :success => "Element.hide('spinner')") %>
     <% if params[:seccion] == "productos" %>
       <div class="linea"></div>
@@ -16,10 +17,12 @@
     <div class="linea"></div>
     <%= texto "% Descuento", 'albaranlinea', 'descuento', params[:descuento] %>
     <%= hidden_field('albaranlinea', 'albaran_id', :value => params[:albaran_id])%>
-  </div>
-  <div class='linea'></div>
-  <div id="propiedades_producto" class="formulario_izqda">
-  </div>
-<%= final_formulario :submit_disabled => true %>
+    <div class='linea'><br>
+      <%= link_to_function("Cambiar a entrada por Concepto", nil, id => "cambio_a_concepto") { |page| page.show 'div_formulario_concepto'; page.hide 'div_formulario_codigo'} %>
+    </div>
+    <div id="propiedades_producto" class="formulario_izqda"></div>
+  <%= final_formulario :submit_disabled => true %>
+</div>
 
 <%= set_focus_to_id 'formulario_campo_producto_codigo' %>
+
