@@ -22,7 +22,7 @@
   <div class='lateral'>
     <div class='caja_lateral'><%= render :partial => "importe_total" %></div>
     <% if ! @albaran.cerrado %>
-      <div class='caja_lateral'><%= render :partial => "albaran_lineas/nuevo" %></div>
+      <div class='caja_lateral'><%= render :partial => "albaran_lineas/nuevo" %><%= render :partial => "albaran_lineas/nuevo_concepto" %></div>
     <% end %>
   </div>
   <div class='contenido'>
