@@ -1,5 +1,7 @@
-2011-05-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.4
+2011-05-20 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.4
 
+  * Entrada de lineas de albaran por concepto (sin vinculacion
+    con el inventario)
   * Los filtros de fechas se guardan en cookies
     para que permanezcan tras la sesion
   * Filtrado por fechas en facturas
